Issue #556458: Remove 'nowrap' attributes in uc_product.

--- a/uc_product/uc_product.css
+++ b/uc_product/uc_product.css
@@ -74,6 +74,10 @@ table.product-list {
   clear: both;
 }
 
+.uc-product-features td {
+  vertical-align: top;
+}
+
 .add-feature div {
   padding-right: 1em;
 }
